Added the css grid and flex box to header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <head>
-
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <wrapper>
-        <header></header>
-        <main></main>
-        <footer></footer>
-    </wrapper>
+    <div class="wrapper">
+        <header>
+            <div class="header-left-content">
+                <a href="#">About</a>
+                <a href="#">Store</a>
+            </div>
+            <div class="header-right-content">
+                <a href="#">Gmail</a>
+                <a href="#">Images</a>
+            </div>
+        </header>
+        <main>Content</main>
+        <footer>
+            <div id="location">United Kingdom</div>
+        </footer>
+    </div>
 </body>
-</html>
+</html> 
