--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="header-left-content">
+            <div class="header-left-links">
                 <a href="#">About</a>
                 <a href="#">Store</a>
             </div>
             <div class="header-right-content">
-                <a href="#">Gmail</a>
-                <a href="#">Images</a>
+                <div class="header-right-links">
+                    <a href="#">Gmail</a>
+                    <a href="#">Images</a>
+                </div>
+                <div class="header-apps">
+                    <a href="#"><div id="app-icon"></div></a>
+                </div>
+                <a href="#" id="sign-in-btn">Sign In</a>
             </div>
         </header>
         <main>Content</main>
