Added flex boxes and media query

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
         <main>Content</main>
         <footer>
             <div id="location">United Kingdom</div>
+            <div class="footer-flex-box">
+                <div id="footer-left-links">
+                    <a href="#">Advertising</a>
+                    <a href="#">Business</a>
+                    <a href="#">How Search Works</a>
+                </div>
+                <div id="footer-carbon-statement">
+                    <img src="images/leaf.png" alt="Leaf" width="12" height="14" />
+                    <a href="#">Carbon neutral since 2007</a>
+                </div>
+                <div id="footer-right-links">
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Settings</a>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
