Added mic icon to search box

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <form action="index.html" method="post">
                         <input type="text" id="search" name="search" />
                     </div>
+                    <div class="search-box-mic">
+                        <img src="images/googlemic_color_24dp.png" width="24" height="24" />
+                    </div>
                 </div>
                 <div class="search-btns">
                     <input type="submit" value="Google Search" />
